Changes for 2.0.11rc1

New features:
A.F....... [ZBX-1357] updated Slovak translation; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...... [ZBX-7648] fixed name resolution when using net.dns items (Juris)
........S. [ZBX-6315] fixed deleting of lost triggers by the low-level discovery rule (Sasha)
........S. [ZBX-7109] improved performance of processing discovered triggers by the low-level discovery rule (Sasha)
A.F....... [ZBX-4218] rewrote the item key parser's source code for independence on the mbstring.func_overload option (Sasha)
.......PS. [ZBX-7686] fixed UTF-8 strings not being fetched fully from Oracle (asaveljevs)
..F....... [ZBX-6721] fixed LDAP authentication (Eduard)
..F....... [ZBX-7609] fixed sound playing after frontend messages closing (Eduard)
..F....... [ZBX-7554] fixed script execution confirmation label encoding (Eduard)
...G...... [ZBX-6790] changed net.tcp.listen and net.udp.listen keys to read the whole /proc/net/(tcp|udp)(6) file in a single operation to avoid losing data if the file is changed between reading operations (wiper)
.......PS. [ZBX-7587] set the correct server status (down) after ORA-01012, ORA-02396 errors (wiper)
...G...... [ZBX-7481] added checking for OpenBSD version to avoid compilation error on OpenBSD v5.4 and newer due to removed swapins/swapouts uvmexp fields (igors)
..F....... [ZBX-7634] removed sid from trigger URL in Monitoring->Triggers (Oleg)
...GI..PS. [ZBX-5526] removed checking for PostgreSQL server version and disabled nonstandard use of escape strings in order to support versions newer than 8.1 (igors)
...G...... [ZBX-7414] added description to HostnameItem that UserParameters and aliases are not supported (igors)
..F....... [ZBX-7508] fixed import map with LLD triggers (Eduard)
..F....... [ZBX-7586] fixed trigger log expression saving in IE10 (Eduard)
..F.....S. [ZBX-7573] fixed item being checked at a wrong time when using flexible intervals (asaveljevs)